metadata/force-app/main/default/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Accessibility_Dashboard_link__c.field-meta.xml
<CustomField>
    <fullName>agf__Accessibility_Dashboard_link__c</fullName>
    <description>Link to Accessibility Dashboard</description>
    <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/01ZfK000000SdG9&apos;,&apos;Accessibility Dashboard Link&apos;)</formula>
    <label>Accessibility Dashboard link</label>
    <type>Text</type>
</CustomField>