metadata/force-app/main/default/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__RCA_Dashboard_link__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Dashboard_link__c</fullName>
    <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/00OfK000000kXqb&apos;,&apos;RCA Dashboard Link&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCA Dashboard link</label>
    <type>Text</type>
</CustomField>