metadata/force-app/main/default/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Scale_Impact_CMP__c.field-meta.xml
<CustomField>
    <fullName>agf__Scale_Impact_CMP__c</fullName>
    <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/a10fK00000IWoyb&apos;,&apos;Build for Scale CMP Link&apos;)</formula>
    <inlineHelpText>Link to Collaborative Meta-process record for  Build to Scale.</inlineHelpText>
    <label>Scale Impact CMP</label>
    <type>Text</type>
</CustomField>