metadata/force-app/main/default/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Security_Dashboard_link__c.field-meta.xml
<CustomField>
    <fullName>agf__Security_Dashboard_link__c</fullName>
    <formula>HYPERLINK(&apos; https://gus.my.salesforce.com/00OfK000000kXqc?dbw=1  &apos;,&apos;Security Dashboard Link&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Dashboard link</label>
    <type>Text</type>
</CustomField>